[package]
name = "hackatom_webdex"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hackatom_webdex"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "anchor-spl/token"]


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
